# pam_telegram_authenticator

./: .gitignore  .ninja_deps  .ninja_log  CMakeLists.txt  Makefile  README.md  build.ninja  conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.txt  conaninfo.txt  graph_info.json  mylib.cbp  pam_telegram_authenticator.c  pam_telegram_authenticator.cbp
.cmake/api/v1/reply/: cache-v2-5e3a3535517f0a3618f6.json  cmakeFiles-v1-9dfac5605378b393fb31.json  codemodel-v2-1dec2528e896971b86b1.json  codemodel-v2-6650058cc03142b87b26.json  index-2022-08-05T15-11-32-0941.json  index-2022-08-06T19-25-57-0683.json  target-main-Release-4e885ec434c7026449fb.json  target-main-Release-8c1284d6ae6bff47a949.json  target-pam_telegram_authenticator-Release-b11c84527c4b2813eb41.json  target-pam_telegram_authenticator-Release-c186304fd9a5112d87b0.json  target-test-Release-1da0fc8f069866f85ecf.json  target-test-Release-2433e6b020a53fd0b41e.json
Ts/: Ts.cpp  Ts.hpp
src/: main.cpp  pam_telegram_authenticator.cpp  test.cpp
src/lib/: Utils.h  pamUtils.h
src/lib/ConfigDTO/: ConfigDTO.cpp  ConfigDTO.hpp
src/lib/PamWrapper/: PamWrapper.cpp  PamWrapper.hpp
src/lib/TgAuthBot/: TgAuthBot.cpp  TgAuthBot.hpp
src/lib/Ts/: Ts.cpp  Ts.hpp
